feat: ビルドターゲットの制限かけとく

--- a/Unity/Assets/BridgeJsCore/BridgeJsCore.asmdef
+++ b/Unity/Assets/BridgeJsCore/BridgeJsCore.asmdef
@@ -1,3 +1,18 @@
-﻿{
-	"name": "BridgeJsCore"
+{
+    "name": "BridgeJsCore",
+    "references": [],
+    "includePlatforms": [
+        "Editor",
+        "iOS",
+        "macOSStandalone",
+        "tvOS"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
